k8s/components/cilium-ingress-l7/policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-ingress-l7
  namespace: default
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/part-of: app-platform
    app.kubernetes.io/component: networkpolicy
    app.kubernetes.io/managed-by: kustomize
spec:
  endpointSelector:
    matchLabels:
      app: app
  ingress:
    # Public app traffic via Gateway. Keep external surface small.
    - fromEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: app
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "^/$"
    # Kubelet HTTP probes from nodes.
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "^/livez$"
              - method: "GET"
                path: "^/readyz$"
